--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "react-scripts": "0.8.5",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
@@ -11,12 +14,10 @@
     "react-dom": "^15.4.2",
     "react-google-maps": "^6.0.1",
     "react-redux": "^5.0.2",
+    "react-redux-modal": "^0.5.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-devtools": "^3.3.2",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.2.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0"
   },
